deps/jansson/test/suites/invalid/lone-open-bracket/error.normal
2 0 2
']' expected near end of file
